--- a/views/user/signup.hbs
+++ b/views/user/signup.hbs
@@ -1,27 +1,49 @@
-<body>
-<div class="row">
-    <dv class="col-md-6 m-auto">
-        <div class="container mt-5 pl-5">
-            <h2 class="text-center">Create new account</h2>
-        <form action="/signup" method="post">
-            <div class="form-group">
-                <label> Name</label>
-                <input type="text" class="form-control" name="name" >
-                </div>
-                <div class="form-group">
-                <label> Email address</label>
-                <input type="email" class="form-control" name="email" >
-                </div>
-                <div class="form-group">
-                <label> Password</label>
-                <input type="password" class="form-control" name="password" >
-                </div>
-                <div class="mt-2">
-                <a href="/login">Already have account?</a>
-                <button type="submit" class="btn btn-primary float-right">Signup</button>
-           </div>
-        </form>
+<section class="vh-100 gradient-custom">
+  <div class="container py-5 h-100">
+    <div class="row justify-content-center align-items-center h-100">
+      <div class="col-12 col-lg-9 col-xl-7">
+        <div class="card shadow-sm card-registration">
+          <div class="card-body p-4 p-md-5">
+            <h3 class="mt-2">Signup Form</h3>
+            <form action="/signup" method="post">
+              <div class="form-group">
+                <label for="name">Name</label>
+                <input type="text" class="form-control" id="name" name="name">
+              </div>
+              <div class="form-group">
+                <label for="email">Email address</label>
+                <input type="email" class="form-control" id="email" name="email">
+              </div>
+              <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password" class="form-control" id="password" name="password">
+              </div>
+              <div class="mt-4">
+                <p>Already have an account? <a href="/login">Login</a></p>
+                <button type="submit" class="btn btn-primary float-end">Signup</button>
+              </div>
+            </form>
+          </div>
         </div>
+      </div>
     </div>
-</div>
-</body>
+  </div>
+</section>
+
+<style>
+  .gradient-custom {
+    background: #00ABE4;
+  }
+
+  .card-registration {
+    border-radius: 15px;
+  }
+
+  .card-registration .form-group {
+    padding-top: 1.5rem;
+  }
+
+  .card-registration .btn-primary {
+    width: 100%;
+  }
+</style>
