--- a/views/user/place-order.hbs
+++ b/views/user/place-order.hbs
@@ -1,144 +1,146 @@
-<body class="background" style="background-color: #E9F1FA">
-    <div class="container mt-5" >
+<div class="container mt-2">
+    <div class="wrapper wrapper-content animated fadeInRight">
         <div class="row">
-            <div class="col-md-6">
-                <div class="card mb-4">
-                    <div class="card-body">
-                        <h4 class="card-title">Delivery Details</h4>
-                    </div>
-                    <div class="card-body">
-                        <form id="checkout-form">
-                            <div class="mb-3">
-                                <label for="address" class="form-label">Address:</label>
-                                <input type="text" class="form-control" id="address" name="address">
+            <div class="col-md-9">
+                <!-- Items in Cart Card -->
+                <form action="/order-success" method="post" id="checkout-form">
+                    <div class="card mb-4">
+                        <div class="card-body">
+                            <h5 class="card-title">Enter your delivery address</h5>
+                            <div class="form-group">
+                                <label for="address">Address:</label>
+                                <input type="text" class="form-control" id="address" name="address" required>
                             </div>
-                            <div class="mb-3">
-                                <label for="pincode" class="form-label">Pincode:</label>
-                                <input type="text" class="form-control" id="pincode" name="pincode">
+                            <div class="form-group">
+                                <label for="pincode">Pincode:</label>
+                                <input type="text" class="form-control" id="pincode" name="pincode" required>
                             </div>
-                            <div class="mb-3">
-                                <label for="mobile" class="form-label">Mobile:</label>
-                                <input type="text" class="form-control" id="mobile" name="mobile">
-                                <input type="hidden" name="userId" value="{{user._id}}">
+                            <div class="form-group">
+                                <label for="mobile">Mobile:</label>
+                                <input type="text" class="form-control" id="mobile" name="mobile" required>
                             </div>
-                            <div class="mb-3">
-                                <label for="email" class="form-label">Email:</label>
-                                <input type="text" class="form-control" id="email" name="email">                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="card mb-4">
-                    <div class="card-body">
-                        <h4 class="card-title">Payment Method</h4>
-                    </div>
-                    <div class="card-body">
-                      <h5>Total Amount:{{total}}</h5>
-                      <hr>
-                        <div class="payment">
-                            <h5>Payment Method:</h5>
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="payment-method" id="cod" value="cod" checked>
-                                <label class="form-check-label" for="cod">COD</label>
-                            </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="payment-method" id="online" value="online">
-                                <label class="form-check-label" for="online">Online Payment</label>
-                            </div>
+                            <input type="hidden" name="userId" value="{{user._id}}">
                         </div>
+                    </div>
+                    <!-- Payment Method Card -->
+                    <div class="card mb-4">
+                        <div class="card-body">
+                            <h5 class="card-title">Payment Method</h5>
+                            <hr>
+                            <div class="form-group">
+                                <label class="radio-inline">
+                                    <input class="form-check-input" type="radio" name="payment-method" id="cod" value="cod" checked> COD
+                                </label>
+                                <label class="radio-inline mt-2 ">
+                                    <input class="form-check-input" type="radio" name="payment-method" id="online" value="online"> Online Payment
+                                </label>
+                            </div>
+                            <hr>
+                            <button type="submit" class="btn btn-primary float-right mt-1">Checkout</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="col-md-3">
+                <!-- Order Summary Card -->
+                <div class="card mb-4">
+                    <div class="card-body">
+                        <h5 class="card-title">Order Summary</h5>
                         <hr>
-                        <button type="submit" class="btn btn-primary float-end">Checkout</button>
+                        <h5 style="color:brown">Order Total: {{total}}</h5>
+                        <hr>
+                        <p class="text-muted small">Choose a shipping address and the payment method</p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</body>
+</div>
 
 <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 <script>
-    $("#checkout-form").submit((e)=>{
-        e.preventDefault()
+    $("#checkout-form").submit((e) => {
+        e.preventDefault();
         $.ajax({
-        url:'/place-order',
-        method:'post',
-        data:$('#checkout-form').serialize(),
-        success:(response)=>{
-            alert(response)
-            if(response.codSuccess){
-                location.href='/order-success'
-            }else{
-                razorpayPayment(response)
+            url: '/place-order',
+            method: 'post',
+            data: $('#checkout-form').serialize(),
+            success: (response) => {
+                alert(response);
+                if (response.codSuccess) {
+                    location.href = '/order-success';
+                } else {
+                    razorpayPayment(response);
+                }
             }
-        }
-        })
-        
-    })
+        });
+    });
 
-    function razorpayPayment(order){
-      var options = {
-    "key": "rzp_test_2vbnJMXJvB8UNJ", // Enter the Key ID generated from the Dashboard
-    "amount": order.amount, // Amount is in currency subunits. Default currency is INR. Hence, 50000 refers to 50000 paise
-    "currency": "INR",
-    "name": "ShoppingCart", //your business name
-    "description": "Test Transaction",
-    "image": "https://example.com/your_logo",
-    "order_id": order.id, //This is a sample Order ID. Pass the `id` obtained in the response of Step 1
-    "handler": function (response){
-        
+    function razorpayPayment(order) {
+        var options = {
+            "key": "rzp_test_2vbnJMXJvB8UNJ", // Enter the Key ID generated from the Dashboard
+            "amount": order.amount, // Amount is in currency subunits. Default currency is INR. Hence, 50000 refers to 50000 paise
+            "currency": "INR",
+            "name": "ShoppingCart", // your business name
+            "description": "Test Transaction",
+            "image": "https://example.com/your_logo",
+            "order_id": order.id, // This is a sample Order ID. Pass the `id` obtained in the response of Step 1
+            "handler": function (response) {
+                verifyPayment(response, order);
+            },
+            "prefill": { // We recommend using the prefill parameter to auto-fill customer's contact information, especially their phone number
+                "name": "Gaurav Kumar", // your customer's name
+                "email": "gaurav.kumar@example.com",
+                "contact": "9000090000" // Provide the customer's phone number for better conversion rates
+            },
+            "notes": {
+                "address": "Razorpay Corporate Office"
+            },
+            "theme": {
+                "color": "#3399cc"
+            }
+        };
+        var rzp1 = new Razorpay(options);
+        rzp1.open();
+    }
 
-        verifyPayment(response,order)
-    },
-    "prefill": { //We recommend using the prefill parameter to auto-fill customer's contact information, especially their phone number
-        "name": "Gaurav Kumar", //your customer's name
-        "email": "gaurav.kumar@example.com", 
-        "contact": "9000090000"  //Provide the customer's phone number for better conversion rates 
-    },
-    "notes": {
-        "address": "Razorpay Corporate Office"
-    },
-    "theme": {
-        "color": "#3399cc"
-    }
-};
-var rzp1 = new Razorpay(options);
- rzp1.open();
-    }
-    function verifyPayment(payment,order){
-    $.ajax({
-    url: '/verify-payment',
-     data:{
-      payment,
-      order
-     },
-     method:'post',
-     success:(response)=>{
-      if(response.status){
-        location.href='/order-success'
-      }else{
-        alert("Payment failed")
-      }
-     }
-     })
+    function verifyPayment(payment, order) {
+        $.ajax({
+            url: '/verify-payment',
+            data: {
+                payment,
+                order
+            },
+            method: 'post',
+            success: (response) => {
+                if (response.status) {
+                    location.href = '/order-success';
+                } else {
+                    alert("Payment failed");
+                }
+            }
+        });
     }
 </script>
 
 <style>
-    input[type=radio]{
-        width:20px;
-        height:20px;
+    input[type=radio] {
+        width: 20px;
+        height: 20px;
     }
-    label.radio-inline{
+
+    label.radio-inline {
         display: flex;
         align-items: center;
     }
-    .checkout{
+
+    .checkout {
         border: 1px solid;
         border-radius: 3px;
         padding: 30px;
     }
-    .payment{
+
+    .payment {
         padding-bottom: 16px;
     }
 </style>
