--- a/views/user/view-products.hbs
+++ b/views/user/view-products.hbs
@@ -2,7 +2,9 @@
     <div class="container mt-5">
       <div class="row">
         {{#each products}}
+       
         <div class="col-md-3 p-3">
+           <a href="/view-each-product" style="text-decoration: none; color: inherit;">
           <div class="card" style="width: 16rem; height:28 rem">
             <img class="card-img-top"
               src="/images/{{this._id}}.png"
@@ -12,13 +14,16 @@
               <p class="card-text">Rs.{{this.price}}</p>
 
               <p class="card-text">{{this.description}}</p>
+              </a>
               
              <button onClick="{{#if ../user}}addToCart('{{this._id}}'){{else}}alert('Please login'){{/if}}" class="btn btn-primary">Add to cart</button>
 
              
             </div>
           </div>
+          
         </div>
+       
         {{/each}}
         </div>
       
