user pages are updated

--- a/views/admin/add-product.hbs
+++ b/views/admin/add-product.hbs
@@ -18,6 +18,15 @@
        
             <label for="description">Description:</label>
             <input type="text" class="form-control" name="description" >
+             <label for="description">Type:</label>
+            <input type="text" class="form-control" name="type" >
+             <label for="description">Color:</label>
+            <input type="text" class="form-control" name="color" >
+             <label for="description">Material:</label>
+            <input type="text" class="form-control" name="material" >
+             <label for="description">Brand:</label>
+            <input type="text" class="form-control" name="brand" >
+            
 
             <label for="">Image:</label>
             <input type="file" name="Image" class="form-control" >
