--- a/views/user/view-order-products.hbs
+++ b/views/user/view-order-products.hbs
@@ -1,19 +1,48 @@
-<section>
-    <div class="container mt-5">
-        <div class="row">
-                {{#each products}}
-               <div class="col-md-3 p-3">
-                    <div class="card" style="width:15rem; height:24rem">
-                        <img class="card-img-top"  style="height:12rem" src="/images/{{this.product._id}}.png" alt="Card image cap">
-                    <div class="card-body">
-                    <h5>{{this.product.name}}</h5>
-                    <p>{{this.product.price}}</p>
-                    <p>{{this.product.quantity}}</p>
-                    <p>{{this.product.description}}</p>
-                    </div>
-                    </div>
-                    </div>
-                {{/each}}
-           </div>
-           </div>
-           </section>
+<!-- content -->
+<body class="py-5">
+  <div class="container " >
+    <div class="row gx-5">
+      {{#each products}}
+      <div class="col-lg-6">
+        <div class="row g-0">
+          <div class="col-md-6">
+            <div class="border rounded-4 mb-3 d-flex justify-content-center">
+              <img style="max-width: 100%; max-height: 100vh; margin: auto;" class="rounded-4 fit" src="/images/{{this.product._id}}.png"/>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="ps-lg-3">
+              <h4 class="title text-dark">{{this.product.name}}</h4>
+
+              <div class="mb-3">
+                <span class="h5">{{this.product.price}}</span>
+              </div>
+
+              <p>
+                {{this.product.description}}
+              </p>
+
+              <div class="row mb-6">
+                <dt class="col-3">Type:</dt>
+                <dd class="col-9">{{this.product.type}}</dd>
+
+                <dt class="col-3">Color</dt>
+                <dd class="col-9">{{this.product.color}}</dd>
+
+                <dt class="col-3">Material</dt>
+                <dd class="col-9">{{this.product.material}}</dd>
+
+                <dt class="col-3">Brand</dt>
+                <dd class="col-9">{{this.product.brand}}</dd>
+              </div>
+              <hr/>
+            </div>
+          </div>
+        </div>
+        <hr />
+      </div>
+      {{/each}}
+    </div>
+  </div>
+</body>
+<!-- content -->
