pages are updated

--- a/views/partials/user-header.hbs
+++ b/views/partials/user-header.hbs
@@ -58,7 +58,7 @@
     <a href="/" class="logo text-decoration-none">Shopping-Cart</a>
 
     <div class="navlist d-flex justify-content-center">
-      <a href="#">products</a>
+      <a href="/view-all-products">products</a>
       <a href="/cart">Cart<span class="badge bg-success" id="cart-count">{{cartCount}}</span></a>
       {{#if user}}
       <a href="/orders">orders</a>
