--- a/views/user/place-order.hbs
+++ b/views/user/place-order.hbs
@@ -127,6 +127,8 @@
     input[type=radio] {
         width: 20px;
         height: 20px;
+        padding-left: 1rem;
+        padding-right: 1rem;
     }
 
     label.radio-inline {
@@ -143,4 +145,5 @@
     .payment {
         padding-bottom: 16px;
     }
+
 </style>
