--- a/views/user/view-products.hbs
+++ b/views/user/view-products.hbs
@@ -209,6 +209,7 @@
       }
       .home-text h1{
         font-size: var(--h1-font);
+        color:var(--bg-color);
         font-weight: 700;
         line-height: 1.1;
         margin-bottom: 20px;
@@ -262,7 +263,6 @@
 
 .box {
   padding: 15px 15px 15px 30px;
-  border-left: 4px solid var(--second-color);
   box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
@@ -274,7 +274,7 @@
 }
 
 .f-icon i {
-  font-size: 33px;
+  font-size: 60px;
   margin-bottom: 10px;
 }
 
@@ -298,7 +298,6 @@
 
 .box:hover {
   transform: translateY(-4px) scale(1.02);
-  border-left: 4px solid var(--text-color);
   cursor: pointer;
 }
 .footer{
@@ -338,8 +337,9 @@
   transform:transform 0.6s;
 }
 .social a:hover{
-  transform: rotate3d(0, 0, 1, 45deg) scale(1.06);
+  transform:  rotate(360deg) scale(1.06);
   color:var(--bg-color);
+  transition: transform 0.5s ease-in-out;
 }
 .copyright{
   display: flex;
