--- a/views/partials/user-header.hbs
+++ b/views/partials/user-header.hbs
@@ -53,7 +53,7 @@
   </body> --}}
 <body>
   {{#if showHeader}}
-      <header class=" fixed top d-flex justify-content-between align-items-center p-3" >
+      <header class=" d-flex justify-content-between align-items-center p-3" >
 
     <a href="/" class="logo text-decoration-none">Shopping-Cart</a>
 
@@ -106,7 +106,7 @@
         top:0;
         right:0;
         width:100%;
-        z-index:1000;
+        z-index:10000;
         background: var(--bg-color);
         box-shadow:0 1px 6px 0 rgb(32 33 36/5%);
         padding: 18px 14%;
