updation in user db

--- a/views/user/signup.hbs
+++ b/views/user/signup.hbs
@@ -4,7 +4,7 @@
       <div class="col-12 col-lg-9 col-xl-7">
         <div class="card shadow-sm card-registration">
           <div class="card-body p-4 p-md-5">
-            <h3 class="mt-2">Signup Form</h3>
+            <h3 class="">Signup Form</h3>
             <form action="/signup" method="post">
               <div class="form-group">
                 <label for="name">Name</label>
