--- a/views/user/login.hbs
+++ b/views/user/login.hbs
@@ -50,7 +50,7 @@
             <div class="col-12">
               <hr class="mt-5 mb-4 border-secondary-subtle">
               <div>
-         <p class="mb-2">already have an account? <a href="/signup" class="link-secondary text-decoration-none">login</a></p>
+         <p class="mb-2"> not an account? <a href="/signup" class="link-secondary text-decoration-none">signup</a></p>
               </div>
             </div>
           </div>
