--- a/views/user/login.hbs
+++ b/views/user/login.hbs
@@ -1,62 +1,60 @@
- <body class="p-3 p-md-4 p-xl-5" style="background-color: #E9F1FA;">
-    <form action="/login" method="post">
+<body class="p-3 p-md-4 p-xl-5" style="background-color: #E9F1FA;">
+  <form action="/login" method="post">
     {{#if loginErr}}
-
-     <p class="error">{{loginErr}}</p>
-        {{/if}}
-  <div class="container">
-    <div class="row">
-      <div class="col-12 col-md-6 bsb-tpl-bg-platinum">
-        <div class="d-flex flex-column justify-content-between h-100 p-3 p-md-4 p-xl-5">
-          <h3 class="m-0">Welcome!</h3>
-        </div>
-      </div>
-      <div class="col-12 col-md-6 bsb-tpl-bg-lotion">
-        <div class="p-3 p-md-4 p-xl-5">
-          <div class="row">
-            <div class="col-12">
-              <div class="mb-5">
-                <h3>Log in</h3>
-              </div>
-            </div>
+      <p class="error">{{loginErr}}</p>
+    {{/if}}
+    <div class="container">
+      <div class="row">
+        <div class="col-12 col-md-6 bsb-tpl-bg-platinum">
+          <div class="d-flex flex-column justify-content-between h-100 p-3 p-md-4 p-xl-5">
+            <h3 class="m-0">Welcome!</h3>
           </div>
-          <form action="#!">
-            <div class="row gy-3 gy-md-4 overflow-hidden">
+        </div>
+        <div class="col-12 col-md-6 bsb-tpl-bg-lotion">
+          <div class="p-3 p-md-4 p-xl-5">
+            <div class="row">
               <div class="col-12">
-                <label for="email" class="form-label">Email <span class="text-danger">*</span></label>
-                <input type="email" class="form-control" name="email" id="email" placeholder="name@example.com" required>
-              </div>
-              <div class="col-12">
-                <label for="password" class="form-label">Password <span class="text-danger">*</span></label>
-                <input type="password" class="form-control" name="password" id="password" value="" required>
-              </div>
-              <div class="col-12">
-                <div class="form-check">
-                  <input class="form-check-input" type="checkbox" value="" name="remember_me" id="remember_me">
-                  <label class="form-check-label text-secondary" for="remember_me">
-                    Keep me logged in
-                  </label>
-                </div>
-              </div>
-              <div class="col-12">
-                <div class="d-grid">
-                  <button class="btn bsb-btn-xl btn-primary" type="submit">Log in</button>
-
+                <div class="mb-5">
+                  <h3>Log in</h3>
                 </div>
               </div>
             </div>
-          </form>
-          <div class="row">
-            <div class="col-12">
-              <hr class="mt-5 mb-4 border-secondary-subtle">
-              <div>
-         <p class="mb-2"> not an account? <a href="/signup" class="link-secondary text-decoration-none">signup</a></p>
+            <form action="/login" method="post">
+              <div class="row gy-3 gy-md-4 overflow-hidden">
+                <div class="col-12">
+                  <label for="email" class="form-label">Email <span class="text-danger">*</span></label>
+                  <input type="email" class="form-control" name="email" id="email" placeholder="name@example.com" required>
+                </div>
+                <div class="col-12">
+                  <label for="password" class="form-label">Password <span class="text-danger">*</span></label>
+                  <input type="password" class="form-control" name="password" id="password" value="" required>
+                </div>
+                <div class="col-12">
+                  <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="" name="remember_me" id="remember_me">
+                    <label class="form-check-label text-secondary" for="remember_me">
+                      Keep me logged in
+                    </label>
+                  </div>
+                </div>
+                <div class="col-12">
+                  <div class="d-grid">
+                    <button class="btn bsb-btn-xl btn-primary" type="submit">Log in</button>
+                  </div>
+                </div>
+              </div>
+            </form>
+            <div class="row">
+              <div class="col-12">
+                <hr class="mt-5 mb-4 border-secondary-subtle">
+                <div>
+                  <p class="mb-2">Not an account? <a href="/signup" class="link-secondary text-decoration-none">Signup</a></p>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
   </form>
 </body>
