--- a/views/admin/view-products.hbs
+++ b/views/admin/view-products.hbs
@@ -1,44 +1,122 @@
-<section>
+<section class="section">
+    <div class="container">
+        <div class="mt-5 pt-3 main">
+          <div class="container-fluid">
+            <div class="row">
+               <a href="/admin/add-product"  class="btn btn-success ms-auto" style="width:auto">Add Product</a>
+              <div class="col-md-12 fw-bold fs-3">
+                Dashboard
+              </div>
+              <div class="row">
+                <div class="col-md-3 mb-3">
+                  <div class="card text-white bg-primary  h-100" >
+  <div class="card-header">Header</div>
+  <div class="card-body">
+    <h5 class="card-title">Primary card title</h5>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+  </div>
+</div>
+                </div>
+                 <div class="col-md-3 mb-3">
+                  <div class="card text-white bg-success h-100" >
+  <div class="card-header">Header</div>
+  <div class="card-body">
+    <h5 class="card-title">Primary card title</h5>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+  </div>
+</div>
+                </div>
+                 <div class="col-md-3 mb-3">
+                  <div class="card text-white bg-warning h-100">
+  <div class="card-header">Header</div>
+  <div class="card-body">
+    <h5 class="card-title">Primary card title</h5>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+  </div>
+</div>
+                </div>
+                 <div class="col-md-3 mb-3">
+                  <div class="card text-white bg-danger h-100">
+  <div class="card-header">Header</div>
+  <div class="card-body">
+    <h5 class="card-title">Primary card title</h5>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+  </div>
+</div>
+                </div>
+              </div>
+              
+            </div>
+          </div>
+        </div>
+
+        <section>
     <div class="container">
         <div class="row mt-4">
-            <a href="/admin/add-product"  class="btn btn-success ms-auto" style="width:auto">Add Product</a>
+            
+            <table class="table mt-5">
+                <thead>
+                    <tr>
+                        <th>_id</th>   
+                        <th>Name</th>                                                                    
+                        <th>Email</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {{#each user}}
+                    <tr>
+                        <td>{{this._id}}</td>
+                        <td>{{this.name}}</td>
+                        <td>{{this.email}}</td>
+                          <td>
+                        <button  class="btn btn-primary" onClick="blockUser('{{this._id}}')">Block</button>
+                        <button  class="btn btn-primary" onClick="unBlockUser('{{this._id}}')">unBlock</button>
+                    </td>
+                    </tr>
+                    {{/each}}
+                </tbody>
+            </table>
         </div>
-        <table class="table mt-5" id="productsTable">
-  <thead>
-    <tr>
-      <th scope="col">No</th>
-      <th scope="col">Title</th>
-      <th scope="col">Category</th>
-      <th scope="col">Description</th>
-      <th>image</th>
-       <th>Options</th>
-
-    </tr>
-  </thead>
-  <tbody>
-
-{{#each products}}
-
-    <tr>
-      <th scope="row">1</th>
-      <td>{{this.name}}</td>
-      <td>{{this.category}}</td>
-      <td>{{this.description}}</td>
-      <td><img  style="width:50px;height:50px" src='/images/{{this._id}}.png' alt=''></td>
-   <td>
-      <a href="/admin/edit-product/{{this._id}}" class="btn btn-primary">Edit</a>
-    <a href="/admin/delete-product/{{this._id}}" class="btn btn-danger" onclick="return confirm('Are you want to delete{{this.name}}?')">Delete</a>
-    </td>
-    </tr>
-   {{/each}}
-
-  </tbody>
-</table>
     </div>
 </section>
 
 <script>
-  $(document).ready( function () {
-    $('#productsTable').DataTable();
-} );
+    function blockUser(userId) {
+       $.ajax({
+        url:"/blockUser",
+        data:{
+            user:userId
+        },
+        method:'post',
+        success:(response=>{
+            if(response.blockUser){
+                alert("user blocked")
+            }
+        })
+       })
+    }
+    function unBlockUser(userId){
+        $.ajax({
+            url:"/unBlockUser",
+            data:{
+                user:userId
+            },
+            method:'post',
+            success:(response=>{
+                if(response.unBlockUser){
+                    alert("user unblocked")
+                }
+            })
+        })
+    }
+    
 </script>
+      
+<style>
+.section{
+  margin-left:var(--offcanvas-width);
+}
+
+</style>
+
+
